--- a/ctf/steganography.html
+++ b/ctf/steganography.html
@@ -11,13 +11,12 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="assets/logo-head.png" alt="AWSN Logo">
+                    <img src="assets/logo-colour.png" alt="Sprok.it Logo">
                 </a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ctf.html" class="active">CTF Challenges</a></li>
-                <li><a href="assets/cyber_career_toolkit.pdf">Career toolkit</a></li>
             </ul>
         </nav>
     </header>
@@ -68,7 +67,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Australian Women in Security Network (AWSN). All rights reserved.</p>
+        <p>&copy; Created by Sujatha Gunja and in collaboration with AWSN.</p>
     </footer>
     <script src="script.js"></script>
 </body>
